--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "main": "src/index.js",
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-bootstrap": "^1.0.0",
-    "react-dom": "16.8.6",
-    "react-scripts": "3.2.0"
+    "react-dom": "^16.8.6",
+    "react-scripts": "^3.4.1",
+    "reactstrap": "^8.4.1"
   },
   "devDependencies": {
     "typescript": "3.3.3"
