--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-scripts": "^3.4.1",
-    "reactstrap": "^8.4.1"
+    "reactstrap": "^8.4.1",
+    "shortid": "^2.2.15"
   },
   "devDependencies": {
     "typescript": "3.3.3"
